Closed Bug 658561 Opened 13 years ago Closed 13 years ago

TI: Assertion failure: rejoin == REJOIN_BINDNAME || rejoin == REJOIN_GETTER || rejoin == REJOIN_POS || rejoin == REJOIN_BINARY, at methodjit/InvokeHelpers.cpp:1219

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Unassigned)

References

Details

(Keywords: assertion, testcase)

The following testcase asserts on TI revision bdb2a82cfd16 (run with -j -m -n -a), tested on 64 bit:

var s1 = 'xx';
for (var x = 0; x < 1000 ; ++x ) { 
  new function() s1++;
  gc();
}
If fecthing 'callee.prototype' at the head of a script triggered recompilation and the script started with an incop, we thought we were rejoining in the middle of the incop and didn't have a way to process the rejoin.

http://hg.mozilla.org/projects/jaegermonkey/rev/b551fb14e885
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
A testcase for this bug was automatically identified at js/src/jit-test/tests/jaeger/recompile/bug658561.js.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.