[INFER] Watch for rejoining at an INCOP after recompilation triggered by callee.prototype, bug 658561.