js/src/jit-test/tests/jaeger/recompile/bug658561.js
@@ -1,0 +1,5 @@
+var s1 = 'xx';
+for (var x = 0; x < 10 ; ++x ) { 
+  new function() s1++;
+  gc();
+}
